--- a/.github/workflows/bump-ruby-version.yml
+++ b/.github/workflows/bump-ruby-version.yml
@@ -42,7 +42,7 @@ jobs:
     - name: Create upgrade branch
       shell: bash
       run: |
-        git checkout -b ${{ steps.set-branch-name.outputs.BRanCH-NAME }}
+        git checkout -b ${{ steps.set-branch-name.outputs.BRanCH_NAME }}
 
     - name: Update Ruby versions
       shell: bash
