--- a/.github/workflows/bump-ruby-version.yml
+++ b/.github/workflows/bump-ruby-version.yml
@@ -53,11 +53,12 @@ jobs:
         echo "Updated DockerFile"
         sed -i.bak "s/^ruby [\"'][^\"']*[\"']/ruby '${{ steps.get-ruby-version.outputs.TARGET_RUBY_VERSION }}'/" Gemfile
         rm Gemfile.bak
-
+        echo "Remove and rebuild lock file."
+        rm Gemfile.lock
         # Now run bundle update
         # bundle update --ruby
         bundle install
-        bundle update --patch
+        #bundle update --patch
         echo "Updated Gemfile and dependencies"
 
     - name: Check for changes
