--- a/.github/workflows/bump-ruby-version.yml
+++ b/.github/workflows/bump-ruby-version.yml
@@ -13,12 +13,10 @@ jobs:
   upgrade-ruby:
     runs-on: ubuntu-latest
     steps:
-    - name: Setup User Env
-      run: |
-          #git config user.name "${{ github.actor }}"
-          git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          #git config user.email "${{ github.actor_id }}+${{ github.actor }}@users.noreply.github.com"
-          git config --local user.name "github-actions[bot]"
+    # - name: Setup User Env
+    #   run: |
+    #       git config user.name "${{ github.actor }}"
+    #       git config user.email "${{ github.actor_id }}+${{ github.actor }}@users.noreply.github.com"
 
     - name: Check out code
       uses: actions/checkout@v4
@@ -81,8 +79,8 @@ jobs:
       if: steps.check_changes.outputs.has_changes == 'true'
       shell: bash
       run: |
-        # git config --local user.email "github-actions[bot]@users.noreply.github.com"
-        # git config --local user.name "github-actions[bot]"
+        git config --local user.email "github-actions[bot]@users.noreply.github.com"
+        git config --local user.name "github-actions[bot]"
         if git ls-remote --exit-code --heads origin " ${{ steps.set-branch-name.outputs.BRanCH-NAME }}"; then
           git push origin --delete "${{ steps.set-branch-name.outputs.BRanCH-NAME }}"
         fi
