--- a/.github/workflows/bump-ruby-version.yml
+++ b/.github/workflows/bump-ruby-version.yml
@@ -86,7 +86,7 @@ jobs:
         fi
         git add .
         git commit -m "Update Ruby to version ${{ steps.get-ruby-version.outputs.TARGET_RUBY_VERSION }}"
-        git push --set-upstream origin ${{ steps.set-branch-name.outputs.BRanCH-NAME }}
+        git push origin ${{ steps.set-branch-name.outputs.BRANCH_NAME }}
 
     - name: Create Pull Request
       if: steps.check_changes.outputs.has_changes == 'true'
