can we use envs

--- a/.github/actions/update-ruby/action.yml
+++ b/.github/actions/update-ruby/action.yml
@@ -8,15 +8,15 @@ runs:
   - name: Set up Ruby
     uses: ruby/setup-ruby@v1
     with:
-      ruby-version: $TARGET_RUBY_VERSION
+      ruby-version: env.TARGET_RUBY_VERSION
 
   - name: Update Ruby versions
     shell: bash
     run: |
-      sed -i s/\[0-9\]\\.\[0-9\]\\.\[0-9\]/'$TARGET_RUBY_VERSION'/ .ruby-version
+      sed -i s/\[0-9\]\\.\[0-9\]\\.\[0-9\]/'env.TARGET_RUBY_VERSION'/ .ruby-version
       cat .ruby-version
       echo "Updated .ruby-version file"
-      sed -i s/\[0-9\]\\.\[0-9\]\\.\[0-9\]/'$TARGET_RUBY_VERSION'/ Dockerfile
+      sed -i s/\[0-9\]\\.\[0-9\]\\.\[0-9\]/'env.TARGET_RUBY_VERSION'/ Dockerfile
       cat Dockerfile
       echo "Updated DockerFile"
 
