--- a/.github/actions/commit-changes/action.yml
+++ b/.github/actions/commit-changes/action.yml
@@ -20,19 +20,6 @@ runs:
         echo "has_changes=false" >> $GITHUB_OUTPUT
       fi
 
-  - name: Commit changes
-    if: steps.check_changes.outputs.has_changes == 'true'
-    shell: bash
-    run: |
-      git config --local user.email "github-actions[bot]@users.noreply.github.com"
-      git config --local user.name "github-actions[bot]"
-      if git ls-remote --exit-code --heads origin " ${{ env.BRANCH_NAME }}"; then
-        git push origin --delete "${{ env.BRANCH_NAME}}"
-      fi
-      git add .
-      git commit -m "Update Ruby to version ${{ env.TARGET_RUBY_VERSION }}"
-      git push origin ${{ env.BRANCH_NAME}}
-
   - name: Create Pull Request
     if: steps.check_changes.outputs.has_changes == 'true'
     shell: bash
@@ -45,13 +32,14 @@ runs:
       - Updated Dockerfile ruby version
       - Rebuilt Gemfile.lock dependencies
 
-      Please review and test before merging.
+      Please review and test before merging."
 
       gh pr create \
         --title "Update Ruby to version ${{ env.TARGET_RUBY_VERSION }}" \
         --body "$PR_BODY" \
         --base master \
         --head ${{ env.BRANCH_NAME }}
+
     env:
       GH_TOKEN: ${{ inputs.github-token }}
       #GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
