--- a/.github/workflows/bump-ruby-version.yml
+++ b/.github/workflows/bump-ruby-version.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Setup github branch for Ruby Updates
       id: setup-branch
       if: ${{ env.RUBY_UPDATED }} == 'true'
-      uses: ./.github/actions/setup-branch-ruby
+      uses: ./.github/actions/setup-branch
 
   upgrade-ruby:
     runs-on: ubuntu-latest
@@ -30,6 +30,9 @@ jobs:
       uses: actions/checkout@v4
     -  name: Update Ruby Version
        if: ${{ env.RUBY_UPDATED }} == 'true'
+       env:
+         TARGET_RUBY_VERSION: ${{ env.TARGET_RUBY_VERSION }}
+         BRANCH_NAME: ${{ env.BRANCH_NAME }}
        uses: ./.github/actions/update-ruby
        with:
           ruby-path: '.'
@@ -41,6 +44,8 @@ jobs:
     - name: Check out code
       uses: actions/checkout@v4
     - name: Raise PR
+      env:
+         BRANCH_NAME: ${{ env.BRANCH_NAME }}
       uses: ./.github/actions/commit-changes
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
