--- a/.github/actions/update-ruby/action.yml
+++ b/.github/actions/update-ruby/action.yml
@@ -64,9 +64,9 @@ runs:
     run: |
       git config --local user.email "github-actions[bot]@users.noreply.github.com"
       git config --local user.name "github-actions[bot]"
-      if git ls-remote --exit-code --heads origin " ${{ env.BRANCH_NAME }}"; then
-        git push origin --delete "${{ env.BRANCH_NAME}}"
+      if git ls-remote --exit-code --heads origin " ${{ env.COMMIT_BRANCH }}"; then
+        git push origin --delete "${{ env.COMMIT_BRANCH}}"
       fi
       git add .
       git commit -m "Update Ruby to version ${{ env.TARGET_RUBY_VERSION }}"
-      git push origin ${{ env.BRANCH_NAME}}
+      git push origin ${{ env.COMMIT_BRANCH}}
