--- a/.github/actions/setup-branch/action.yml
+++ b/.github/actions/setup-branch/action.yml
@@ -9,7 +9,7 @@ runs:
     shell: bash
     run: |
       echo "BRANCH_NAME=update-to-ruby-${{ env.TARGET_RUBY_VERSION }}" >> "$GITHUB_ENV"
-      echo "COMMIT_BRANCH=env.BRANCH_NAME" >> "$GITHUB_OUTPUt"
+      echo "COMMIT_BRANCH=${{ env.BRANCH_NAME }}" >> "$GITHUB_OUTPUt"
 
   - name: Create or checkout branch
     shell: bash
