--- a/.github/actions/check-ruby/action.yml
+++ b/.github/actions/check-ruby/action.yml
@@ -9,8 +9,8 @@ runs:
     shell: bash
     run: |
       LATEST_RUBY=$(curl -s https://api.github.com/repos/ruby/ruby/releases/latest | grep '"tag_name":' | sed -E 's/.*"v([^"]+)".*/\1/' | tr '_' '.')
-      echo "RUBY_VERSION=$LATEST_RUBY" >> "$GITHUB_ENV"
-      echo "TARGET_RUBY_VERSION=$LATEST_RUBY" >> "$GITHUB_OUTPUT
+      echo "RUBY_VERSION=$LATEST_RUBY" >> $GITHUB_ENV
+      echo "TARGET_RUBY_VERSION=$LATEST_RUBY" >> $GITHUB_OUTPUT
 
   - name: Check if Ruby is updated
     shell: bash
