--- a/.github/actions/check-ruby/action.yml
+++ b/.github/actions/check-ruby/action.yml
@@ -9,13 +9,13 @@ runs:
     shell: bash
     run: |
       LATEST_RUBY=$(curl -s https://api.github.com/repos/ruby/ruby/releases/latest | grep '"tag_name":' | sed -E 's/.*"v([^"]+)".*/\1/' | tr '_' '.')
-      echo "RUBY_VERSION=$LATEST_RUBY" >> $GITHUB_ENV
+      echo "TARGET_RUBY_VERSION=$LATEST_RUBY" >> $GITHUB_ENV
       echo "TARGET_RUBY_VERSION=$LATEST_RUBY" >> $GITHUB_OUTPUT
 
   - name: Check if Ruby is updated
     shell: bash
     run: |
-      if grep -q "${{ env.RUBY_VERSION }}" ".ruby-version" ; then
+      if grep -q "${{ env.TARGET_RUBY_VERSION }}" ".ruby-version" ; then
         echo "Ruby Version Match, nothing to do, exit with success."
         echo "RUBY_UPDATED=false" >> $GITHUB_OUTPUT
       else
