--- a/.github/workflows/bump-ruby-version.yml
+++ b/.github/workflows/bump-ruby-version.yml
@@ -22,9 +22,7 @@ jobs:
       uses: ./.github/actions/check-ruby
     - name: Setup github branch for Ruby Updates
       id: setup-branch
-      if: ${{ steps.check-ruby.outputs.RUBY_UPDATE }} == 'true'
-      env:
-         TARGET_RUBY_VERSION: ${{ steps.check-ruby.outputs.TARGET_RUBY_VERSION }}
+      if: ${{ steps.check-ruby.outputs.RUBY_UPDATED }} == 'true'
       uses: ./.github/actions/setup-branch
 
   upgrade-ruby:
